--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarthak-kapoor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -32,8 +33,38 @@
                     Fugit in laudantium officia dicta molestiae ipsum eum fugiat nesciunt esse? 
                     Odit et illum deserunt perspiciatis, laboriosam vel molestias ipsum labore amet.</p>
             </section>
-        </main>
-        <footer></footer>    
+        </main>    
     </div>
+    <footer>
+        <ul class="contact-me">
+            <li class="contact-me-item">
+                <div class="contact-me-icon">
+                    <i class="fas fa-phone-alt"></i>
+                </div>
+                <div>
+                    <strong>Call</strong><br>
+                    <span>9582446105</span>
+                </div>
+            </li>
+            <li class="contact-me-item">
+                <div class="contact-me-icon">
+                    <i class="far fa-envelope"></i>
+                </div>
+                <div>
+                    <strong>Call</strong><br>
+                    <span>9582446105</span>
+                </div>
+            </li> 
+            <li class="contact-me-item">
+                <div class="contact-me-icon">
+                    <i class="fas fa-plus"></i>
+                </div>
+                <div>
+                    <strong>Call</strong><br>
+                    <span>9582446105</span>
+                </div>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
