--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarthak-kapoor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="resume-section.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -22,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="home-page">
+        <!-- <main class="home-page">
             <aside class="profile-image">
                 <img src="./images/sarthak-kapoor.jpg" alt="">
             </aside>
@@ -33,7 +36,70 @@
                     Fugit in laudantium officia dicta molestiae ipsum eum fugiat nesciunt esse? 
                     Odit et illum deserunt perspiciatis, laboriosam vel molestias ipsum labore amet.</p>
             </section>
-        </main>    
+        </main>     -->
+        <main class="resume">
+            <section class="left">
+                <h1>Resume</h1>
+                <hr>
+                <section class="cv-section">
+                    <div class="section-title">
+                        profession-info
+                    </div>
+                    <div class="section-body">
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit
+                            Text” or double click me and you can start adding your own content and make changes to the
+                            font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for
+                            you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </section>
+                <hr>
+                <section class="cv-section">
+                    <div class="section-title">
+                        Work experience
+                    </div>
+                    <div class="section-body">
+                        <div class="card">
+                            <h3>Job position</h3>
+                            <h5>duratiion</h5>
+                            <article>
+                                ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                                “Edit Text” or double click me and you can start adding your own content and make
+                                changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
+                                great place for you to write more. Tell a story about yourself.
+                            </article>
+                        </div>
+                        <div class="section-body">
+                            <div class="card">
+                                <h3>Job position</h3>
+                                <h5>duratiion</h5>
+                                <article>
+                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                                    “Edit Text” or double click me and you can start adding your own content and make
+                                    changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                                    I’m a great place for you to write more. Tell a story about yourself.
+                                </article>
+                            </div>
+                            <div class="section-body">
+                                <div class="card">
+                                    <h3>Job position</h3>
+                                    <h5>duratiion</h5>
+                                    <article>
+                                        ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just
+                                        click “Edit Text” or double click me and you can start adding your own content
+                                        and make changes to the font. Feel free to drag and drop me anywhere you like on
+                                        your page. I’m a great place for you to write more. Tell a story about yourself.
+                                    </article>
+                                </div>
+
+                            </div>
+
+                </section>
+                <section class="education"></section>
+            </section>
+            <section class="right"></section>
+        </main>
     </div>
     <footer>
         <ul class="contact-me">
@@ -54,7 +120,7 @@
                     <strong>Call</strong><br>
                     <span>9582446105</span>
                 </div>
-            </li> 
+            </li>
             <li class="contact-me-item">
                 <div class="contact-me-icon">
                     <i class="fas fa-plus"></i>
@@ -67,4 +133,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
