Feat: resume page  added

--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
             </section>
         </main>     -->
         <main class="resume">
-            <section class="left">
-                <h1>Resume</h1>
-                <hr>
-                <section class="cv-section">
-                    <div class="section-title">
-                        profession-info
-                    </div>
-                    <div class="section-body">
-                        <article>
-                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit
-                            Text” or double click me and you can start adding your own content and make changes to the
-                            font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for
-                            you to write more. Tell a story about yourself.
-                        </article>
-                    </div>
-                </section>
-                <hr>
-                <section class="cv-section">
-                    <div class="section-title">
-                        Work experience
-                    </div>
-                    <div class="section-body">
-                        <div class="card">
-                            <h3>Job position</h3>
-                            <h5>duratiion</h5>
-                            <article>
-                                ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                                “Edit Text” or double click me and you can start adding your own content and make
-                                changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
-                                great place for you to write more. Tell a story about yourself.
-                            </article>
+            <h1>Resume</h1>
+            <div class="resume-body">
+                <section class="left">
+                    <hr>
+                    <section class="main-section">
+                        <div class="section-title">
+                            profession-info
                         </div>
                         <div class="section-body">
+                            <article>
+                                ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit
+                                Text” or double click me and you can start adding your own content and make changes to the
+                                font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for
+                                you to write more. Tell a story about yourself.
+                            </article>
+                        </div>
+                    </section>
+                    <hr>
+                    <section class="main-section">
+                        <div class="section-title">
+                            Work experience
+                        </div>
+                        <div class="section-body">
+                            <div class="card">
+                                <h3>Job position</h3>
+                                <h5>duratiion</h5>
+                                <article>
+                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                                    “Edit Text” or double click me and you can start adding your own content and make
+                                    changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
+                                    great place for you to write more. Tell a story about yourself.
+                                </article>
+                            </div>
                             <div class="card">
                                 <h3>Job position</h3>
                                 <h5>duratiion</h5>
@@ -81,8 +81,7 @@
                                     I’m a great place for you to write more. Tell a story about yourself.
                                 </article>
                             </div>
-                            <div class="section-body">
-                                <div class="card">
+                            <div class="card">
                                     <h3>Job position</h3>
                                     <h5>duratiion</h5>
                                     <article>
@@ -91,14 +90,62 @@
                                         and make changes to the font. Feel free to drag and drop me anywhere you like on
                                         your page. I’m a great place for you to write more. Tell a story about yourself.
                                     </article>
-                                </div>
-
                             </div>
-
+                        </div>
+    
+                    </section>
+                    <hr>
+                    <section class="main-section">
+                        <div class="section-title">
+                            Education
+                        </div>
+                        <div class="section-body">
+                            <div class="card">
+                                <h3>University name</h3>
+                                <h5>duratiion</h5>
+                                <article>
+                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                                    “Edit Text” or double click me and you can start adding your own content and make
+                                    changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
+                                    great place for you to write more. Tell a story about yourself.
+                                </article>
+                            </div>
+                            <div class="card">
+                                <h3>University name</h3>
+                                <h5>duratiion</h5>
+                                <article>
+                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                                    “Edit Text” or double click me and you can start adding your own content and make
+                                    changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                                    I’m a great place for you to write more. Tell a story about yourself.
+                                </article>
+                            </div>
+                        </div>
+    
+                    </section>
                 </section>
-                <section class="education"></section>
-            </section>
-            <section class="right"></section>
+                <aside class="right">
+                    <div class="sec-section">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <h3>skills</h3>
+                        <hr>
+                        <ul>
+                            <li>Java</li>
+                            <li>Javascript</li>
+                            <li>HTML</li>
+                        </ul>
+                    </div>
+                    <div class="sec-section">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <h3>Languages</h3>
+                        <hr>
+                        <ul>
+                            <li>Hindi</li>
+                            <li>English</li>
+                        </ul>
+                    </div>
+                </aside>    
+            </div>
         </main>
     </div>
     <footer>
