feat: projects section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="resume-section.css">
+    <link rel="stylesheet" href="projects-section.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     Odit et illum deserunt perspiciatis, laboriosam vel molestias ipsum labore amet.</p>
             </section>
         </main>     -->
-        <main class="resume">
+        <!-- <main class="resume">
             <h1>Resume</h1>
             <div class="resume-body">
                 <section class="left">
@@ -146,6 +147,75 @@
                     </div>
                 </aside>    
             </div>
+        </main> -->
+        <main class="projects">
+            <h1>Latest Projects</h1>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Job position</h3>
+                        <h5>duratiion</h5>
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Job position</h3>
+                        <h5>duratiion</h5>
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Job position</h3>
+                        <h5>duratiion</h5>
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <footer>
