style: added color to resume, changed font-sizes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <div class="container">
         <header>
             <div class="title">
-                <h1>Sarthak Kapoor</h1>
+                <h2 onclick="changePage('home')"><a href="#home"> Sarthak Kapoor</a></h2>
             </div>
             <nav class="nav">
                 <ul class="list ">
                     <li class="list-item" onclick="changePage('home')"><a href="#home"> Home</a></li>
                     <li class="list-item" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
                     <li class="list-item" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
+                    <li class="list-item" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
                     <li class="list-item" onclick="changePage('contact')"><a href="#contact"> Contact</a></li>
                 </ul>
             </nav>
