--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                     <i class="far fa-envelope"></i>
                 </div>
                 <div>
-                    <strong>Call</strong><br>
-                    <span>9582446105</span>
+                    <strong>Email</strong><br>
+                    <span>sarthak242@gmail.com</span>
                 </div>
             </li>
             <li class="contact-me-item">
@@ -246,8 +246,13 @@
                     <i class="fas fa-plus"></i>
                 </div>
                 <div>
-                    <strong>Call</strong><br>
-                    <span>9582446105</span>
+                    <strong>Follow me</strong><br>
+                    <span class="follow-me-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-github"></i>
+                    </span>
                 </div>
             </li>
         </ul>
