feat: blogs page added fix: fixed active link navigation

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </div>
             <nav class="nav">
                 <ul class="list ">
-                    <li class="list-item" onclick="changePage('home')"><a href="#home"> Home</a></li>
-                    <li class="list-item" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
-                    <li class="list-item" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
-                    <li class="list-item" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
-                    <li class="list-item" onclick="changePage('contact')"><a href="#contact"> Contact</a></li>
+                    <li class="list-item home-link" onclick="changePage('home')"><a href="#home"> Home</a></li>
+                    <li class="list-item resume-link" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
+                    <li class="list-item projects-link" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
+                    <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
+                    <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -205,6 +205,53 @@
                 <div class="project-info">
                     <div class="section-title">
                         Project 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Job position</h3>
+                        <h5>duratiion</h5>
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <main class="blogs page">
+            <h1>All Blogs</h1>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/blog.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Blog 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Job position</h3>
+                        <h5>duratiion</h5>
+                        <article>
+                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/blog.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Blog 2
                     </div>
                     <hr>
                     <div class="card">
