Feat: my information added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="list-item resume-link" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
                     <li class="list-item projects-link" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
                     <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
-                    <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li>
+                    <!-- <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li> -->
                 </ul>
             </nav>
         </header>
@@ -36,17 +36,17 @@
             <section class="about-me">
                 <h1>Hello,</h1>
                 <h2>a bit about me:</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Fugit in laudantium officia dicta molestiae ipsum eum fugiat nesciunt esse? 
-                    Odit et illum deserunt perspiciatis, laboriosam vel molestias ipsum labore amet.</p>
+                <p>
+                    I am Sarthak Kapoor currently having 1+ years of experience who love to learn new things. I like problem solving and you know what? I am a big messi fan.
+                </p>
             </section>
         </main>    
         <main class="resume page">
             <h1>Resume</h1>
             <div class="resume-body">
                 <section class="left">
-                    <hr>
-                    <section class="main-section">
+                    <!-- <hr> -->
+                    <!-- <section class="main-section">
                         <div class="section-title">
                             profession-info
                         </div>
@@ -58,7 +58,7 @@
                                 you to write more. Tell a story about yourself.
                             </article>
                         </div>
-                    </section>
+                    </section> -->
                     <hr>
                     <section class="main-section">
                         <div class="section-title">
@@ -66,37 +66,34 @@
                         </div>
                         <div class="section-body">
                             <div class="card">
-                                <h3>Job position</h3>
-                                <h5>duratiion</h5>
+                                <h3>Systems Engineer at Tata Consultancy Services</h3>
+                                <h5>July 2019 - present</h5>
                                 <article>
-                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                                    “Edit Text” or double click me and you can start adding your own content and make
-                                    changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
-                                    great place for you to write more. Tell a story about yourself.
+                                    ​I am currently working as a Systems Engineer (grade c1) in TCS working on angular 7. The primary UI libraries and framework I have worked here are primeng, bootstrap, ag-grid etc.
                                 </article>
                             </div>
                             <div class="card">
-                                <h3>Job position</h3>
-                                <h5>duratiion</h5>
+                                <h3>Intern at Tata Consultancy Services</h3>
+                                <h5>Jan 2019 - Mar 2019</h5>
                                 <article>
-                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                                    “Edit Text” or double click me and you can start adding your own content and make
-                                    changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                                    I’m a great place for you to write more. Tell a story about yourself.
+                                   I worked on an internal project in which me made a survey making web app like surveyjs.
                                 </article>
                             </div>
                             <div class="card">
-                                    <h3>Job position</h3>
-                                    <h5>duratiion</h5>
+                                    <h3>Bootcamp Trainee at nagarro</h3>
+                                    <h5>Jun 2018 - June 2018</h5>
                                     <article>
-                                        ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just
-                                        click “Edit Text” or double click me and you can start adding your own content
-                                        and make changes to the font. Feel free to drag and drop me anywhere you like on
-                                        your page. I’m a great place for you to write more. Tell a story about yourself.
+                                        ​It was a 3 week bootcamp in which we were taught HTML, CSS, Javascript in first week. Nodejs in second week and angular in third week. And after that we were evaluated based on an e-commerce web app assignment.
                                     </article>
                             </div>
+                            <div class="card">
+                                <h3>Intern at Coding Ninjas</h3>
+                                <h5>Jan 2017 - Feb 2017</h5>
+                                <article>
+                                    ​During this internship I had to code problems in C, C++ and Java which were then posted on their online coding platform.
+                                </article>
                         </div>
-    
+                        </div>
                     </section>
                     <hr>
                     <section class="main-section">
@@ -105,23 +102,27 @@
                         </div>
                         <div class="section-body">
                             <div class="card">
-                                <h3>University name</h3>
-                                <h5>duratiion</h5>
+                                <h3>Btech in Information Technology </h3>
+                                <h5>2015 - 2019</h5>
                                 <article>
-                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                                    “Edit Text” or double click me and you can start adding your own content and make
-                                    changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a
-                                    great place for you to write more. Tell a story about yourself.
+                                    Bharati Vidyapeeth's college of Engineering, New Delhi<br>
+                                    CGPA: 8.89
                                 </article>
                             </div>
                             <div class="card">
-                                <h3>University name</h3>
-                                <h5>duratiion</h5>
+                                <h3>Class 12</h3>
+                                <h5>2014 - 2015</h5>
                                 <article>
-                                    ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                                    “Edit Text” or double click me and you can start adding your own content and make
-                                    changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                                    I’m a great place for you to write more. Tell a story about yourself.
+                                    ASN Sr Sec School <br>
+                                    Percentage: 95.4%
+                                </article>
+                            </div>
+                            <div class="card">
+                                <h3>Class 10</h3>
+                                <h5>2012 - 2013</h5>
+                                <article>
+                                    ASN Sr Sec School <br>
+                                    CGPA: 9.8
                                 </article>
                             </div>
                         </div>
@@ -137,6 +138,9 @@
                             <li>Java</li>
                             <li>Javascript</li>
                             <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Angular</li>
+                            <li>Nodejs</li>
                         </ul>
                     </div>
                     <div class="sec-section">
@@ -164,19 +168,39 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <h3>Job position</h3>
-                        <h5>duratiion</h5>
+                        <h3>CLI Quiz app</h3>
+                        <h5><a href="https://github.com/SarthakSam/quiz-maker-and-taker">Github Link</a></h5>
+                        <h5><a href="https://repl.it/@SarthakSam/SkinnyAquaRuntime#index.js?embed=1&output=1">Project Link</a></h5>
                         <article>
-                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                            “Edit Text” or double click me and you can start adding your own content and make
-                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself.
+                            This cli app allows you to make yur own quiz on any topic and share it with your friends and challenge them with a fun quiz. 
+                            Also you can select any quiz from all the available quizes and test your knowledge. The Quiz is made using nodejs and works on nodejs cli.
                         </article>
                     </div>
                 </div>
             </section>
             <hr>
             <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 2
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Postit</h3>
+                        <h5><a href="https://github.com/SarthakSam/campground">Github Link</a></h5>
+                        <h5><a href="http://postit2402.herokuapp.com/">Project Link</a></h5>
+                        <article>
+                            This nodejs web app allows you to post about different places and rate them. User can comment and explore differnet places.
+                            The app is made using nodejs, HTML, Css and Javascript;
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <!-- <section class="horizontal-card section">
                 <div class="project-image">
                     <img src="images/project.svg" alt="">
                 </div>
@@ -196,29 +220,7 @@
                         </article>
                     </div>
                 </div>
-            </section>
-            <hr>
-            <section class="horizontal-card section">
-                <div class="project-image">
-                    <img src="images/project.svg" alt="">
-                </div>
-                <div class="project-info">
-                    <div class="section-title">
-                        Project 1
-                    </div>
-                    <hr>
-                    <div class="card">
-                        <h3>Job position</h3>
-                        <h5>duratiion</h5>
-                        <article>
-                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                            “Edit Text” or double click me and you can start adding your own content and make
-                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself.
-                        </article>
-                    </div>
-                </div>
-            </section>
+            </section> -->
         </main>
         <main class="blogs page">
             <h1>All Blogs</h1>
@@ -233,13 +235,12 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <h3>Job position</h3>
-                        <h5>duratiion</h5>
+                        <h3>Dummy Blog 1</h3>
                         <article>
                             ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
                             “Edit Text” or double click me and you can start adding your own content and make
                             changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself.
+                            I’m a great place for you to write more. Tell a story about yourself. <a href="">Read more</a>
                         </article>
                     </div>
                 </div>
@@ -255,13 +256,12 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <h3>Job position</h3>
-                        <h5>duratiion</h5>
+                        <h3>Dummy blog 2</h3>
                         <article>
                             ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
                             “Edit Text” or double click me and you can start adding your own content and make
                             changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself.
+                            I’m a great place for you to write more. Tell a story about yourself. <a href="">Read more</a>
                         </article>
                     </div>
                 </div>
@@ -295,10 +295,10 @@
                 <div>
                     <strong>Follow me</strong><br>
                     <span class="follow-me-icons">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin-in"></i>
-                        <i class="fab fa-github"></i>
+                        <a href="https://www.facebook.com/sarthak.sam.9/"> <i class="fab fa-facebook-f"></i> </a>
+                        <a href="https://www.instagram.com/sarthak242/">  <i class="fab fa-instagram"></i> </a>
+                        <a href="https://www.linkedin.com/in/sarthak-kapoor-130357132/">  <i class="fab fa-linkedin-in"></i> </a>
+                        <a href="https://github.com/SarthakSam"> <i class="fab fa-github"></i> </a>
                     </span>
                 </div>
             </li>
