--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Hello,</h1>
                 <h2>a bit about me:</h2>
                 <p>
-                    I am Sarthak Kapoor currently having 1+ years of experience who love to learn new things. I like problem solving and you know what? I am a big messi fan.
+                    I am Sarthak Kapoor currently having 1+ years of experience and I love to learn new things. I like problem solving and you know what? I am a big messi fan.
                 </p>
             </section>
         </main>    
@@ -158,13 +158,33 @@
         <main class="projects page">
             <h1>Latest Projects</h1>
             <hr>
-            <section class="horizontal-card section">
+              <section class="horizontal-card section">
                 <div class="project-image">
                     <img src="images/project.svg" alt="">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
                         Project 1
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h5><a href="https://github.com/SarthakSam/footballQuiz">Github Link</a></h5>
+                        <h5><a href="https://repl.it/@SarthakSam/LightsalmonVaguePhp#index.js?embed=1&output=1">Project Link</a></h5>
+                        <article>
+                            The Quiz contains 15 questions about your favourite game that would even challenge the craziest football geeks.
+                            The Quiz is made using nodejs and works on nodejs cli.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project.svg" alt="">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 2
                     </div>
                     <hr>
                     <div class="card">
@@ -185,7 +205,7 @@
                 </div>
                 <div class="project-info">
                     <div class="section-title">
-                        Project 2
+                        Project 3
                     </div>
                     <hr>
                     <div class="card">
@@ -200,27 +220,6 @@
                 </div>
             </section>
             <hr>
-            <!-- <section class="horizontal-card section">
-                <div class="project-image">
-                    <img src="images/project.svg" alt="">
-                </div>
-                <div class="project-info">
-                    <div class="section-title">
-                        Project 1
-                    </div>
-                    <hr>
-                    <div class="card">
-                        <h3>Job position</h3>
-                        <h5>duratiion</h5>
-                        <article>
-                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                            “Edit Text” or double click me and you can start adding your own content and make
-                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself.
-                        </article>
-                    </div>
-                </div>
-            </section> -->
         </main>
         <main class="blogs page">
             <h1>All Blogs</h1>
