Style: changed footer height and project info

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                             <li>CSS</li>
                             <li>Angular</li>
                             <li>Nodejs</li>
+                            <li>Git</li>
                         </ul>
                     </div>
                     <div class="sec-section">
@@ -168,6 +169,7 @@
                     </div>
                     <hr>
                     <div class="card">
+                        <h3>CLI Football Quiz app</h3>
                         <h5><a href="https://github.com/SarthakSam/footballQuiz">Github Link</a></h5>
                         <h5><a href="https://repl.it/@SarthakSam/LightsalmonVaguePhp#index.js?embed=1&output=1">Project Link</a></h5>
                         <article>
@@ -268,6 +270,7 @@
         </main>
     </div>
     <footer>
+        <br>
         <ul class="contact-me">
             <li class="contact-me-item">
                 <div class="contact-me-icon">
@@ -302,6 +305,7 @@
                 </div>
             </li>
         </ul>
+        <br>
     </footer>
 </body>
 
