feat: added social section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                         <h3>skills</h3>
                         <hr>
                         <ul>
+                            <li>Data Stuctures</li>
+                            <li>algorithms</li>
                             <li>Java</li>
                             <li>Javascript</li>
                             <li>HTML</li>
@@ -151,6 +153,16 @@
                         <ul>
                             <li>Hindi</li>
                             <li>English</li>
+                        </ul>
+                    </div>
+                    <div class="sec-section">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <h3>Social</h3>
+                        <hr>
+                        <ul>
+                            <li><a href="https://leetcode.com/sarthak242/">Leetcode</a></li>
+                            <li><a href="https://www.linkedin.com/in/sarthak-kapoor-130357132/">Linkedin</a></li>
+                            <li><a href="https://github.com/SarthakSam">Github</a></li>
                         </ul>
                     </div>
                 </aside>    
